--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
+		<module>shy-api</module>
+		<module>shy-reader</module>
+		<module>shy-builder-java</module>
 		<module>shy-compiler</module>
 	</modules>
 	<build>
