--- a/shy-reader/pom.xml
+++ b/shy-reader/pom.xml
@@ -7,12 +7,19 @@
 		<artifactId>shy-parent</artifactId>
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
-	<artifactId>shy-compiler</artifactId>
+	<artifactId>shy-reader</artifactId>
+
 	<dependencies>
+		<!-- api -->
 		<dependency>
 			<groupId>com.sum.shy</groupId>
-			<artifactId>shy-builder-java</artifactId>
+			<artifactId>shy-api</artifactId>
 			<version>${project.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>16.0.1</version>
 		</dependency>
 	</dependencies>
 </project>
