--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,7 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<modules>
-		<module>shy-api</module>
-		<module>shy-reader</module>
-		<module>shy-builder-java</module>
-		<module>shy-compiler</module>
+		<module>shy-core</module>
 	</modules>
 	<build>
 		<!-- 配置java版本 不配置的话默认父类配置的是1.6 -->
