--- a/shy-core/pom.xml
+++ b/shy-core/pom.xml
@@ -9,11 +9,17 @@
 	</parent>
 	<artifactId>shy-core</artifactId>
 	<dependencies>
-		<!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+		<!-- 工具包 -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>16.0.1</version>
+		</dependency>
+		<!-- 工具包 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.9</version>
 		</dependency>
 	</dependencies>
 </project>
