--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,10 @@
 	<modules>
 		<module>shy-core</module>
 	</modules>
+	<properties>    
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
+        <maven.compiler.encoding>UTF-8</maven.compiler.encoding>    
+    </properties>  
 	<build>
 		<!-- 配置java版本 不配置的话默认父类配置的是1.6 -->
 		<pluginManagement>
