调整项目工程目录,为添加其他语言做准备

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,9 @@
 		<module>shy-core</module>
 		<module>shy-check</module>
 		<module>shy-assist</module>
+		<module>shy-java</module>
+		<module>shy-start</module>
+		<module>shy-lib</module>
 	</modules>
 	<properties>    
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>    
