--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>shy-lib</module>
 		<module>shy-core</module>
 		<module>shy-java</module>
+		<module>shy-c</module>
 		<module>shy-start</module>
 	</modules>
 
