调整项目结构，计划实现go

--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 		<module>shy-java</module>
 		<module>shy-c</module>
 		<module>shy-start</module>
+		<module>shy-go</module>
 	</modules>
 
 	<properties>
