--- a/shy-core/pom.xml
+++ b/shy-core/pom.xml
@@ -8,6 +8,10 @@
 		<version>1.0.0-SNAPSHOT</version>
 	</parent>
 	<artifactId>shy-core</artifactId>
+	<properties>
+		<slf4j.version>1.7.25</slf4j.version>
+		<log4j.version>2.13.0</log4j.version>
+	</properties>
 	<dependencies>
 		<!-- lib -->
 		<dependency>
@@ -30,8 +34,23 @@
 		<!-- slf4j -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.7.2</version>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-slf4j-impl</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>${log4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>${log4j.version}</version>
 		</dependency>
 	</dependencies>
 </project>
