--- a/shy-core/pom.xml
+++ b/shy-core/pom.xml
@@ -24,11 +24,11 @@
 			<artifactId>pisces-core</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
-		<!-- 工具包 -->
+		<!-- utils -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>16.0.1</version>
+			<version>23.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
