--- a/shy-core/pom.xml
+++ b/shy-core/pom.xml
@@ -5,11 +5,11 @@
 	<parent>
 		<groupId>com.sum.shy</groupId>
 		<artifactId>shy-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>shy-core</artifactId>
 	<properties>
-		<pisces.version>1.0.0-SNAPSHOT</pisces.version>
+		<pisces.version>1.0.0</pisces.version>
 		<guava.version>29.0-jre</guava.version>
 		<lang3.version>3.9</lang3.version>
 		<slf4j.version>1.7.25</slf4j.version>
