--- a/shy-test/pom.xml
+++ b/shy-test/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>com.sum.shy</groupId>
 		<artifactId>shy-parent</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0</version>
 	</parent>
 	<artifactId>shy-test</artifactId>
 	<dependencies>
