--- a/shy-core/pom.xml
+++ b/shy-core/pom.xml
@@ -54,8 +54,11 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.6</version>
 				<configuration>
+					<!-- 不添加maven的描述信息 -->
+					<archive>
+						<addMavenDescriptor>false</addMavenDescriptor>
+					</archive>
 					<outputDirectory>${project.build.directory}/../../deploy/lib</outputDirectory>
 				</configuration>
 			</plugin>
@@ -77,5 +80,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
