--- a/jass-test/pom.xml
+++ b/jass-test/pom.xml
@@ -3,15 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.sum.shy</groupId>
-		<artifactId>shy-parent</artifactId>
+		<groupId>com.sum.jass</groupId>
+		<artifactId>jass-parent</artifactId>
 		<version>1.0.2</version>
 	</parent>
-	<artifactId>shy-test</artifactId>
+	<artifactId>jass-test</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>com.sum.shy</groupId>
-			<artifactId>shy-core</artifactId>
+			<groupId>com.sum.jass</groupId>
+			<artifactId>jass-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
