--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.encoding>UTF-8</maven.compiler.encoding>
+		<pisces.version>1.0.0</pisces.version>
+		<guava.version>29.0-jre</guava.version>
+		<lang3.version>3.9</lang3.version>
+		<slf4j.version>1.7.25</slf4j.version>
 	</properties>
 
 	<build>
