--- a/spirit-lib/pom.xml
+++ b/spirit-lib/pom.xml
@@ -3,9 +3,9 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.sum.slimx</groupId>
-		<artifactId>slimx-parent</artifactId>
+		<groupId>com.sum.spirit</groupId>
+		<artifactId>spirit-parent</artifactId>
 		<version>1.0.2</version>
 	</parent>
-	<artifactId>slimx-lib</artifactId>
+	<artifactId>spirit-lib</artifactId>
 </project>
