--- a/spirit-test/pom.xml
+++ b/spirit-test/pom.xml
@@ -3,15 +3,15 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.sum.slimx</groupId>
-		<artifactId>slimx-parent</artifactId>
+		<groupId>com.sum.spirit</groupId>
+		<artifactId>spirit-parent</artifactId>
 		<version>1.0.2</version>
 	</parent>
-	<artifactId>slimx-test</artifactId>
+	<artifactId>spirit-test</artifactId>
 	<dependencies>
 		<dependency>
-			<groupId>com.sum.slimx</groupId>
-			<artifactId>slimx-core</artifactId>
+			<groupId>com.sum.spirit</groupId>
+			<artifactId>spirit-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
