将java实现逻辑重新抽出到新的jar

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 		<module>spirit-core</module>
 		<module>spirit-lib</module>
 		<module>spirit-test</module>
+		<module>spirit-java</module>
 	</modules>
 
 	<properties>
