引入springIoC，并进行重构

--- a/spirit-core/pom.xml
+++ b/spirit-core/pom.xml
@@ -16,29 +16,33 @@
 			<artifactId>spirit-lib</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<!-- pisces -->
+		<!-- spring core -->
 		<dependency>
-			<groupId>com.sum.pisces</groupId>
-			<artifactId>pisces-core</artifactId>
-			<version>${pisces.version}</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
 		</dependency>
 		<!-- guava -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>${guava.version}</version>
 		</dependency>
 		<!-- lang -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>${lang3.version}</version>
 		</dependency>
 		<!-- slf4j -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j.version}</version>
 		</dependency>
 	</dependencies>
 
