--- a/spirit-plug/pom.xml
+++ b/spirit-plug/pom.xml
@@ -8,4 +8,11 @@
 		<version>1.0.2</version>
 	</parent>
 	<artifactId>spirit-plug</artifactId>
+	<dependencies>
+		<dependency>
+			<groupId>com.sum.spirit</groupId>
+			<artifactId>spirit-core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
+	</dependencies>
 </project>
