--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<guava.version>29.0-jre</guava.version>
 		<lang3.version>3.9</lang3.version>
 		<slf4j.version>1.7.25</slf4j.version>
+		<velocity.version>1.7</velocity.version>
 	</properties>
 
 	<dependencyManagement>
@@ -60,6 +61,12 @@
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
 				<version>${slf4j.version}</version>
+			</dependency>
+			<!-- velocity -->
+			<dependency>
+				<groupId>org.apache.velocity</groupId>
+				<artifactId>velocity</artifactId>
+				<version>${velocity.version}</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
