--- a/spirit-plug/pom.xml
+++ b/spirit-plug/pom.xml
@@ -14,5 +14,10 @@
 			<artifactId>spirit-core</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<!-- velocity -->
+		<dependency>
+			<groupId>org.apache.velocity</groupId>
+			<artifactId>velocity</artifactId>
+		</dependency>
 	</dependencies>
 </project>
