重新部署，并打包

--- a/spirit-starter/pom.xml
+++ b/spirit-starter/pom.xml
@@ -8,6 +8,7 @@
 		<version>1.0.2</version>
 	</parent>
 	<artifactId>spirit-starter</artifactId>
+
 	<dependencies>
 		<dependency>
 			<groupId>com.sum.spirit</groupId>
@@ -20,4 +21,36 @@
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-jar-plugin</artifactId>
+				<configuration>
+					<archive>
+						<addMavenDescriptor>false</addMavenDescriptor>
+					</archive>
+					<outputDirectory>${project.build.directory}/../../spirit-deploy/lib</outputDirectory>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-dependencies</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-dependencies</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${project.build.directory}/../../spirit-deploy/lib</outputDirectory>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
+
 </project>
