修改模块名

--- a/spirit-starter/pom.xml
+++ b/spirit-starter/pom.xml
@@ -17,7 +17,7 @@
 		</dependency>
 		<dependency>
 			<groupId>com.sum.spirit</groupId>
-			<artifactId>spirit-plug</artifactId>
+			<artifactId>spirit-plugs</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
