修改部署的包名

--- a/spirit-starter/pom.xml
+++ b/spirit-starter/pom.xml
@@ -31,7 +31,7 @@
 					<archive>
 						<addMavenDescriptor>false</addMavenDescriptor>
 					</archive>
-					<outputDirectory>${project.build.directory}/../../spirit-deploy/lib</outputDirectory>
+					<outputDirectory>${project.build.directory}/../../spirit/lib</outputDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -45,7 +45,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/../../spirit-deploy/lib</outputDirectory>
+							<outputDirectory>${project.build.directory}/../../spirit/lib</outputDirectory>
 						</configuration>
 					</execution>
 				</executions>
