添加hutool工具包

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<springBoot.version>2.2.2.RELEASE</springBoot.version>
+		<hutool.version>5.5.1</hutool.version>
 		<guava.version>29.0-jre</guava.version>
 		<lang3.version>3.9</lang3.version>
 		<slf4j.version>1.7.25</slf4j.version>
@@ -33,6 +34,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter</artifactId>
 			<version>${springBoot.version}</version>
+		</dependency>
+		<!-- hutool -->
+		<dependency>
+			<groupId>cn.hutool</groupId>
+			<artifactId>hutool-all</artifactId>
+			<version>${hutool.version}</version>
 		</dependency>
 		<!-- guava -->
 		<dependency>
