添加助手启动器，为sublime提供推导能力

--- a/pom.xml
+++ b/pom.xml
@@ -7,11 +7,27 @@
 	<version>1.8.26</version>
 	<packaging>pom</packaging>
 
+	<repositories>
+		<repository>
+			<id>nexus-aliyun</id>
+			<name>Nexus aliyun</name>
+			<layout>default</layout>
+			<url>http://maven.aliyun.com/nexus/content/groups/public</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+		</repository>
+	</repositories>
+
 	<modules>
 		<module>spirit-core</module>
 		<module>spirit-java</module>
 		<module>spirit-plugs</module>
 		<module>spirit-starter</module>
+		<module>spirit-starter-assistant</module>
 		<module>spirit-test</module>
 	</modules>
 
