--- a/spirit-plugs/pom.xml
+++ b/spirit-plugs/pom.xml
@@ -9,6 +9,7 @@
 	</parent>
 	<artifactId>spirit-plugs</artifactId>
 	<dependencies>
+		<!-- spirit-core -->
 		<dependency>
 			<groupId>com.sum.spirit</groupId>
 			<artifactId>spirit-core</artifactId>
