--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 		<module>spirit-java</module>
 		<module>spirit-plugs</module>
 		<module>spirit-starter</module>
-		<module>spirit-starter-assistant</module>
+		<module>spirit-starter-kit</module>
 		<module>spirit-test</module>
 	</modules>
 
