--- a/spirit-starter-kit/pom.xml
+++ b/spirit-starter-kit/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>spirit-parent</artifactId>
 		<version>1.8.26</version>
 	</parent>
-	<artifactId>spirit-starter-assistant</artifactId>
+	<artifactId>spirit-starter-kit</artifactId>
 
 	<dependencies>
 		<!-- spirit-starter -->
