--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<guava.version>29.0-jre</guava.version>
 		<lang3.version>3.9</lang3.version>
 		<slf4j.version>1.7.25</slf4j.version>
+		<lombok.version>1.18.16</lombok.version>
 	</properties>
 
 </project>
