--- a/spirit-starter-kit/pom.xml
+++ b/spirit-starter-kit/pom.xml
@@ -29,6 +29,13 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
