--- a/spirit-starter-kit/src/main/resources/application.properties
+++ b/spirit-starter-kit/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 server.port=8729
 spirit.compile.auto.run=false
-spirit.compile.file.extension=sp
+spirit.compile.scope=part
+spirit.compile.syntax.level=easy
