优化配置项代码

--- a/spirit-starter-kit/src/main/resources/application.properties
+++ b/spirit-starter-kit/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 server.port=8729
 spirit.compile.auto.run=false
-spirit.compile.scope=part
-spirit.compile.syntax.level=easy
+spirit.compile.scope.all=false
+spirit.compile.document.debug=false
+spirit.compile.syntax.check=false
