--- a/pom.xml
+++ b/pom.xml
@@ -36,11 +36,11 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<spring.boot.version>2.2.2.RELEASE</spring.boot.version>
+		<lombok.version>1.18.16</lombok.version>
 		<hutool.version>5.5.1</hutool.version>
 		<guava.version>29.0-jre</guava.version>
 		<lang3.version>3.9</lang3.version>
-		<slf4j.version>1.7.25</slf4j.version>
-		<lombok.version>1.18.16</lombok.version>
+		<commons-io.version>2.8.0</commons-io.version>
 	</properties>
 
 </project>
