--- a/spirit-core/pom.xml
+++ b/spirit-core/pom.xml
@@ -15,6 +15,12 @@
 			<artifactId>spring-boot-starter</artifactId>
 			<version>${spring.boot.version}</version>
 		</dependency>
+		<!-- lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+		</dependency>
 		<!-- hutool -->
 		<dependency>
 			<groupId>cn.hutool</groupId>
@@ -37,7 +43,7 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.8.0</version>
+			<version>${commons-io.version}</version>
 		</dependency>
 	</dependencies>
 </project>
