--- a/spirit-starter-kit/src/main/resources/application.properties
+++ b/spirit-starter-kit/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 server.port=8729
 spirit.compile.auto.run=false
-spirit.compile.document.debug=false
+spirit.compile.debug=false
 spirit.compile.syntax.check=false
