新建词法分析器模块，对核心逻辑开始进行拆分

--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,10 @@
 	</repositories>
 
 	<modules>
+		<module>spirit-api</module>
+		<module>spirit-common</module>
 		<module>spirit-core</module>
+		<module>spirit-core-lexer</module>
 		<module>spirit-java</module>
 		<module>spirit-starter</module>
 		<module>spirit-starter-kit</module>
