--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<guava.version>29.0-jre</guava.version>
 		<lang3.version>3.9</lang3.version>
 		<commons-io.version>2.8.0</commons-io.version>
+		<junit.version>5.5.2</junit.version>
 	</properties>
 
 </project>
