--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<module>spirit-starter</module>
 		<module>spirit-starter-kit</module>
 		<module>spirit-test</module>
+		<module>spirit-core-element</module>
 	</modules>
 
 	<properties>
