--- a/spirit-core/pom.xml
+++ b/spirit-core/pom.xml
@@ -15,5 +15,11 @@
 			<artifactId>spirit-core-lexer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<!-- spirit-core-element -->
+		<dependency>
+			<groupId>com.sum.spirit</groupId>
+			<artifactId>spirit-core-element</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
 </project>
