--- a/spirit-core/spirit-core-element/pom.xml
+++ b/spirit-core/spirit-core-element/pom.xml
@@ -15,5 +15,18 @@
 			<artifactId>spirit-core-lexer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
+		<!-- spring boot test -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<version>${spring.boot.version}</version>
+			<scope>test</scope>
+			<exclusions>
+				<exclusion>
+					<groupId>org.junit.vintage</groupId>
+					<artifactId>junit-vintage-engine</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 </project>
