拆分class模块，注意该版本依然有问题没有修复

--- a/spirit-core/pom.xml
+++ b/spirit-core/pom.xml
@@ -13,5 +13,6 @@
 		<module>spirit-core-lexer</module>
 		<module>spirit-core-element</module>
 		<module>spirit-core-class</module>
+		<module>spirit-core-compile</module>
 	</modules>
 </project>
