--- a/spirit-starter/spirit-starter-java/pom.xml
+++ b/spirit-starter/spirit-starter-java/pom.xml
@@ -10,10 +10,10 @@
 	<artifactId>spirit-starter-java</artifactId>
 
 	<dependencies>
-		<!-- spirit-java -->
+		<!-- spirit-output-java -->
 		<dependency>
 			<groupId>com.sum.spirit</groupId>
-			<artifactId>spirit-java</artifactId>
+			<artifactId>spirit-output-java</artifactId>
 			<version>${project.version}</version>
 		</dependency>
 	</dependencies>
