--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
 		<module>spirit-java</module>
 		<module>spirit-starter</module>
 		<module>spirit-test</module>
+		<module>spirit-output</module>
 	</modules>
 
 	<properties>
