重新打包，并发布1.9.98版本

--- a/spirit-starter/spirit-starter-kit/pom.xml
+++ b/spirit-starter/spirit-starter-kit/pom.xml
@@ -55,6 +55,8 @@
 						</goals>
 						<configuration>
 							<outputDirectory>${project.build.directory}/../../../spirit/lib_web</outputDirectory>
+							<includeScope>compile</includeScope>
+							<includeScope>runtime</includeScope>
 						</configuration>
 					</execution>
 				</executions>
