--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.sum.spirit</groupId>
 	<artifactId>spirit-parent</artifactId>
-	<version>1.9.98</version>
+	<version>2.0.48</version>
 	<packaging>pom</packaging>
 
 	<repositories>
@@ -42,5 +42,16 @@
 		<lang3.version>3.9</lang3.version>
 		<commons-io.version>2.8.0</commons-io.version>
 	</properties>
+
+	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<skip>true</skip>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
