--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -28,6 +29,7 @@
 		<module>spirit-output</module>
 		<module>spirit-starter</module>
 		<module>spirit-test</module>
+		<module>spirit-maven-plugin</module>
 	</modules>
 
 	<properties>
@@ -45,6 +47,7 @@
 
 	<build>
 		<plugins>
+			<!-- Skip the test when package -->
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
