删除test模块，添加example模块，并提供maven插件

--- a/spirit-example/spirit-example-common/pom.xml
+++ b/spirit-example/spirit-example-common/pom.xml
@@ -8,4 +8,18 @@
 		<version>2.1.30</version>
 	</parent>
 	<artifactId>spirit-example-common</artifactId>
+	<dependencies>
+		<!-- slf4j -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>${slf4j.version}</version>
+		</dependency>
+		<!-- lang -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>${lang3.version}</version>
+		</dependency>
+	</dependencies>
 </project>
