--- a/spirit-core/spirit-core-element/pom.xml
+++ b/spirit-core/spirit-core-element/pom.xml
@@ -15,7 +15,7 @@
 			<artifactId>spirit-core-lexer</artifactId>
 			<version>${project.version}</version>
 		</dependency>
-		<!-- spring boot test -->
+		<!-- spring-boot-starter-test -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
