--- a/spirit-example/spirit-example-common/pom.xml
+++ b/spirit-example/spirit-example-common/pom.xml
@@ -9,13 +9,13 @@
 	</parent>
 	<artifactId>spirit-example-common</artifactId>
 	<dependencies>
-		<!-- slf4j -->
+		<!-- slf4j-api -->
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
 		</dependency>
-		<!-- lang -->
+		<!-- commons-lang3 -->
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
