--- a/pom.xml
+++ b/pom.xml
@@ -28,9 +28,8 @@
 		<module>spirit-core</module>
 		<module>spirit-output</module>
 		<module>spirit-starter</module>
-		<module>spirit-maven-plugin</module>
+		<module>spirit-tools</module>
 		<module>spirit-example</module>
-		<module>spirit-code-tools</module>
 	</modules>
 
 	<properties>
