--- a/spirit-tools/spirit-code-tools/pom.xml
+++ b/spirit-tools/spirit-code-tools/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.sum.spirit</groupId>
-		<artifactId>spirit-parent</artifactId>
+		<artifactId>spirit-tools</artifactId>
 		<version>2.1.30</version>
 	</parent>
 	<artifactId>spirit-code-tools</artifactId>
@@ -31,7 +31,7 @@
 					<archive>
 						<addMavenDescriptor>false</addMavenDescriptor>
 					</archive>
-					<outputDirectory>${project.build.directory}/../../spirit/lib</outputDirectory>
+					<outputDirectory>${project.build.directory}/../../../spirit/lib</outputDirectory>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -45,7 +45,7 @@
 							<goal>copy-dependencies</goal>
 						</goals>
 						<configuration>
-							<outputDirectory>${project.build.directory}/../../spirit/lib</outputDirectory>
+							<outputDirectory>${project.build.directory}/../../../spirit/lib</outputDirectory>
 							<includeScope>compile</includeScope>
 							<includeScope>runtime</includeScope>
 						</configuration>
