--- a/spirit-tools/spirit-maven-plugin/pom.xml
+++ b/spirit-tools/spirit-maven-plugin/pom.xml
@@ -6,7 +6,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.sum.spirit</groupId>
-		<artifactId>spirit-parent</artifactId>
+		<artifactId>spirit-tools</artifactId>
 		<version>2.1.30</version>
 	</parent>
 	<artifactId>spirit-maven-plugin</artifactId>
