--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.sum.spirit</groupId>
+	<groupId>com.gitee.spirit</groupId>
 	<artifactId>spirit-parent</artifactId>
 	<version>2.1.30</version>
 	<packaging>pom</packaging>
