--- a/spirit-example/spirit-example-plugin/pom.xml
+++ b/spirit-example/spirit-example-plugin/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.sum.spirit</groupId>
+		<groupId>com.gitee.spirit</groupId>
 		<artifactId>spirit-example</artifactId>
 		<version>2.1.30</version>
 	</parent>
@@ -11,7 +11,7 @@
 	<dependencies>
 		<!-- spirit-example-common -->
 		<dependency>
-			<groupId>com.sum.spirit</groupId>
+			<groupId>com.gitee.spirit</groupId>
 			<artifactId>spirit-example-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -19,7 +19,7 @@
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>com.sum.spirit</groupId>
+				<groupId>com.gitee.spirit</groupId>
 				<artifactId>spirit-maven-plugin</artifactId>
 				<version>${project.version}</version>
 				<executions>
