--- a/spirit-starter/spirit-starter-java/pom.xml
+++ b/spirit-starter/spirit-starter-java/pom.xml
@@ -3,7 +3,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>com.sum.spirit</groupId>
+		<groupId>com.gitee.spirit</groupId>
 		<artifactId>spirit-starter</artifactId>
 		<version>2.1.30</version>
 	</parent>
@@ -11,7 +11,7 @@
 	<dependencies>
 		<!-- spirit-output-java -->
 		<dependency>
-			<groupId>com.sum.spirit</groupId>
+			<groupId>com.gitee.spirit</groupId>
 			<artifactId>spirit-output-java</artifactId>
 			<version>${project.version}</version>
 		</dependency>
